# lil-render

./: .gitignore  .stylish-haskell.yaml  LICENSE  README.md  lil-render.cabal  stack.yaml  test.tga
src/: BMP.hs  Image.hs  Main.hs  Model.hs  Renderer.hs
src/BMP/: Format.hs
src/Image/: Color.hs  DrawingPrimitives.hs  Mutable.hs  NamedColors.hs  TGA.hs  Texture.hs
src/Image/Drawing/: Primitives.hs
src/LilRender/: Color.hs  Image.hs  Model.hs  Renderer.hs  Shader.hs  Texture.hs
src/LilRender/Color/: Named.hs  scale.c  scale.h
src/LilRender/Image/: Color.hs  DrawingPrimitives.c  DrawingPrimitives.h  DrawingPrimitives.hs  Immutable.hs  Mutable.hs  NamedColors.hs  STB.hs  TGA.hs  Texture.hs
src/LilRender/Image/Format/: TGA.hs
src/LilRender/Math/: Geometry.c  Geometry.h  Geometry.hs  Matrix.hs  Transform.hs  Vector.hs  matrix.c  matrix.h
src/LilRender/Math/Matrix/: Transform.hs
src/LilRender/Model/: Internal.hs  Wavefront.hs
src/LilRender/Shader/: Library.hs
src/Math/: Geometry.hs  Matrix.hs  Vector.hs
src/Math/Matrix/: Transform.hs
src/Model/: Wavefront.hs
src/Renderer/: Wireframe.hs
