name:                 lil-render
version:              0.1.0.0
synopsis:             The worst 3D renderer ever created.
-- description:
-- license:
-- license-file:
homepage:             
author:               Jon Williams
maintainer:           sasinestro@gmail.com
category:             
-- copyright:
build-type:           Simple
cabal-version:        >=1.10

library
    exposed-modules:    LilRender.Image
                      , LilRender.Image.TGA
                      , LilRender.Image.Texture
                      , LilRender.Image.Mutable
                      , LilRender.Image.DrawingPrimitives
                      , LilRender.Image.Color
                      , LilRender.Image.NamedColors

                      , LilRender.Model
                      , LilRender.Model.Wavefront

                      , LilRender.Math.Geometry
                      , LilRender.Math.Matrix
                      , LilRender.Math.Matrix.Transform
                      , LilRender.Math.Vector

                      , LilRender.Renderer

    build-depends:      base             >= 4.7     && < 5
                      , bytestring       >= 0.10.6  && < 0.11
                      , vector           >= 0.11.0  && < 0.12
                      , primitive        >= 0.6.1   && < 0.7
                      , deepseq          >= 1.4.1   && < 1.5
                      , attoparsec       >= 0.13.0  && < 0.14
                      , text             >= 1.2.2   && < 1.3
                      , store            >= 0.2.0.0 && < 0.3
                      , th-utilities     >= 0.1.0   && < 0.2

    default-extensions: DeriveGeneric
                      , OverloadedStrings
                      , FlexibleInstances
                      , GADTs
                      , StandaloneDeriving
                      , GeneralizedNewtypeDeriving
                      , DeriveFunctor
                      , DeriveFoldable
                      , BinaryLiterals
                      , TemplateHaskell
                      , TypeFamilies
                      , TypeOperators
                      , FlexibleContexts
                      , DataKinds
                      , KindSignatures
                      , ScopedTypeVariables
                      , RankNTypes
                      , MultiParamTypeClasses
                      , OverloadedStrings
                      , ViewPatterns
                      , BangPatterns
    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields

    hs-source-dirs:     src
    default-language:   Haskell2010

executable lil-render
    main-is:          Main.hs

    build-depends:      base       >= 4.7     && < 5
                      , criterion  >= 1.1.1   && < 1.2
                      , deepseq    >= 1.4.1   && < 1.5
                      , lil-render >= 0.1.0   && < 0.2

    default-extensions:  BangPatterns
                       , TemplateHaskell
                       , OverloadedStrings
                       , TypeFamilies
                       , GADTs

    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields

    hs-source-dirs:     bin
    default-language:   Haskell2010

