name:                 lil-render
version:              0.1.0.0
synopsis:             The worst 3D renderer ever created.
-- description:
-- license:
-- license-file:
homepage:             
author:               Alexis Williams
maintainer:           sasinestro@gmail.com
category:
-- copyright:
build-type:           Simple
cabal-version:        >=1.10

library
    exposed-modules:    LilRender.Color
                      , LilRender.Color.Named
                      , LilRender.Image
                      , LilRender.Math.Geometry
                      , LilRender.Math.Matrix
                      , LilRender.Math.Transform
                      , LilRender.Math.Vector
                      , LilRender.Model
                      , LilRender.Texture
                      , LilRender.Renderer
                      , LilRender.Shader
                      , LilRender.Shader.Library

    other-modules:      LilRender.Image.DrawingPrimitives
                      , LilRender.Image.Format.TGA
                      , LilRender.Image.Mutable
                      , LilRender.Image.Immutable
                      , LilRender.Model.Internal
                      , LilRender.Model.Wavefront


    build-depends:      base             >= 4.7     && < 5
                      , bytestring       >= 0.10.6  && < 0.11
                      , vector           >= 0.11.0  && < 0.12
                      , primitive        >= 0.6.1   && < 0.7
                      , deepseq          >= 1.4.1   && < 1.5
                      , criterion        >= 1.1.1   && < 1.2
                      , attoparsec       >= 0.13.0  && < 0.14
                      , text             >= 1.2.2   && < 1.3
                      , store            >= 0.2.0.0 && < 0.3
                      , th-utilities     >= 0.1.0   && < 0.2
                      , vector-th-unbox  >= 0.2.1.6 && < 0.3
                      , template-haskell >= 2.10.0  && < 2.12
                      , QuickCheck       >= 2.8.2   && < 2.9
                      , repa             >= 3.4     && < 3.5
                      , JuicyPixels      >= 3.2.7   && < 3.3

    default-extensions: DeriveGeneric
                      , OverloadedStrings
                      , FlexibleInstances
                      , GADTs
                      , StandaloneDeriving
                      , GeneralizedNewtypeDeriving
                      , DeriveFunctor
                      , DeriveFoldable
                      , BinaryLiterals
                      , TemplateHaskell
                      , TypeFamilies
                      , TypeOperators
                      , FlexibleContexts
                      , DataKinds
                      , KindSignatures
                      , ScopedTypeVariables
                      , RankNTypes
                      , MultiParamTypeClasses
                      , OverloadedStrings
                      , ViewPatterns
                      , BangPatterns
                      , UnicodeSyntax
    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -rtsopts -g

    hs-source-dirs:     src
    c-sources:  src/LilRender/Image/DrawingPrimitives.c
    cc-options: -Wall -O3
    extra-libraries: m

    default-language:   Haskell2010

executable lil-render
    main-is:          Main.hs

    build-depends:      base       >= 4.7     && < 5
                      , lil-render >= 0.1.0   && < 0.2
                      , criterion  >= 1.1.1   && < 1.2
                      , deepseq    >= 1.4.1   && < 1.5

    default-extensions:  BangPatterns
                       , TemplateHaskell
                       , OverloadedStrings
                       , TypeFamilies
                       , GADTs
                       , UnicodeSyntax

    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -rtsopts -g

    hs-source-dirs:     bin
    default-language:   Haskell2010

benchmark lil-render-bench
    type:             exitcode-stdio-1.0
    main-is:          Bench.hs

    build-depends:      base             >= 4.7     && < 5
                      , bytestring       >= 0.10.6  && < 0.11
                      , vector           >= 0.11.0  && < 0.12
                      , primitive        >= 0.6.1   && < 0.7
                      , deepseq          >= 1.4.1   && < 1.5
                      , criterion        >= 1.1.1   && < 1.2
                      , attoparsec       >= 0.13.0  && < 0.14
                      , text             >= 1.2.2   && < 1.3
                      , store            >= 0.2.0   && < 0.3
                      , th-utilities     >= 0.1.0   && < 0.2
                      , vector-th-unbox  >= 0.2.1   && < 0.3
                      , template-haskell >= 2.10.0  && < 2.11
                      , QuickCheck       >= 2.8.2   && < 2.9
                      , repa             >= 3.4.1   && < 3.5
    default-extensions: DeriveGeneric
                      , OverloadedStrings
                      , FlexibleInstances
                      , GADTs
                      , StandaloneDeriving
                      , GeneralizedNewtypeDeriving
                      , DeriveFunctor
                      , DeriveFoldable
                      , BinaryLiterals
                      , TemplateHaskell
                      , TypeFamilies
                      , TypeOperators
                      , FlexibleContexts
                      , DataKinds
                      , KindSignatures
                      , ScopedTypeVariables
                      , RankNTypes
                      , MultiParamTypeClasses
                      , OverloadedStrings
                      , ViewPatterns
                      , BangPatterns
                      , UnicodeSyntax

    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -main-is Bench.main -rtsopts -g

    hs-source-dirs:   bin, src
    c-sources:  src/LilRender/Image/DrawingPrimitives.c
    cc-options: -Wall -O3
    extra-libraries: m

    default-language: Haskell2010
