name:                 lil-render
version:              0.1.0.0
synopsis:             The worst 3D renderer ever created.
-- description:
-- license:
-- license-file:
homepage:
author:               Jon Williams
maintainer:           sasinestro@gmail.com
category:
-- copyright:
build-type:           Simple
cabal-version:        >=1.10

flag debug
  description: Enable debug logging
  default:     False

library
    exposed-modules:    LilRender.Color
                      , LilRender.Color.Named
                      , LilRender.Image
                      , LilRender.Math.Geometry
                      , LilRender.Math.Matrix
                      , LilRender.Math.Transform
                      , LilRender.Math.Vector
                      , LilRender.Model
                      , LilRender.Texture
                      , LilRender.Renderer
                      , LilRender.Shader
                      , LilRender.Shader.Library

    other-modules:      LilRender.Image.DrawingPrimitives
                      , LilRender.Image.Mutable
                      , LilRender.Image.Immutable
                      , LilRender.Image.STB
                      , LilRender.Model.Internal
                      , LilRender.Model.Wavefront


    build-depends:      base             >= 4.7     && < 5
                      , bytestring       >= 0.10.6  && < 0.11
                      , vector           >= 0.11.0  && < 0.12
                      , primitive        >= 0.6.1   && < 0.7
                      , deepseq          >= 1.4.1   && < 1.5
                      , criterion        >= 1.1.1   && < 1.2
                      , attoparsec       >= 0.13.0  && < 0.14
                      , text             >= 1.2.2   && < 1.3
                      , template-haskell >= 2.10.0  && < 2.12
                      , QuickCheck       >= 2.8.2   && < 2.9

    default-extensions: DeriveGeneric
                      , OverloadedStrings
                      , FlexibleInstances
                      , GADTs
                      , StandaloneDeriving
                      , GeneralizedNewtypeDeriving
                      , DeriveFunctor
                      , DeriveFoldable
                      , BinaryLiterals
                      , TemplateHaskell
                      , TypeFamilies
                      , TypeOperators
                      , FlexibleContexts
                      , DataKinds
                      , KindSignatures
                      , ScopedTypeVariables
                      , RankNTypes
                      , MultiParamTypeClasses
                      , OverloadedStrings
                      , ViewPatterns
                      , BangPatterns
                      , UnicodeSyntax
                      , CPP

    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -g

    hs-source-dirs:     src
    c-sources:  src/LilRender/Color/scale.c src/LilRender/Image/DrawingPrimitives.c src/LilRender/Image/stb_image.c
    cc-options: -Wall -O3 -msse2 -g
    include-dirs: deps
    extra-libraries: m

    default-language:   Haskell2010

    if flag(debug)
        cpp-options:  -DDEBUG

executable lil-render
    main-is:          Main.hs

    build-depends:      base       >= 4.7     && < 5
                      , lil-render >= 0.1.0   && < 0.2
                      , criterion  >= 1.1.1   && < 1.2
                      , deepseq    >= 1.4.1   && < 1.5

    default-extensions:  BangPatterns
                       , TemplateHaskell
                       , OverloadedStrings
                       , TypeFamilies
                       , GADTs
                       , UnicodeSyntax

    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -rtsopts -g

    hs-source-dirs:     bin
    default-language:   Haskell2010

benchmark lil-render-bench
    type:             exitcode-stdio-1.0
    main-is:          Bench.hs

    build-depends:      base             >= 4.7     && < 5
                      , bytestring       >= 0.10.6  && < 0.11
                      , vector           >= 0.11.0  && < 0.12
                      , primitive        >= 0.6.1   && < 0.7
                      , deepseq          >= 1.4.1   && < 1.5
                      , criterion        >= 1.1.1   && < 1.2
                      , attoparsec       >= 0.13.0  && < 0.14
                      , text             >= 1.2.2   && < 1.3
                      , template-haskell >= 2.10.0  && < 2.12
                      , QuickCheck       >= 2.8.2   && < 2.9

    default-extensions: DeriveGeneric
                      , OverloadedStrings
                      , FlexibleInstances
                      , GADTs
                      , StandaloneDeriving
                      , GeneralizedNewtypeDeriving
                      , DeriveFunctor
                      , DeriveFoldable
                      , BinaryLiterals
                      , TemplateHaskell
                      , TypeFamilies
                      , TypeOperators
                      , FlexibleContexts
                      , DataKinds
                      , KindSignatures
                      , ScopedTypeVariables
                      , RankNTypes
                      , MultiParamTypeClasses
                      , OverloadedStrings
                      , ViewPatterns
                      , BangPatterns
                      , UnicodeSyntax
                      , CPP

    ghc-options: -O2 -funfolding-use-threshold=16 -funbox-strict-fields -fwarn-unused-binds -fwarn-unused-imports -fprof-auto -fprof-cafs -main-is Bench.main -rtsopts

    hs-source-dirs:   bin, src
    c-sources:  src/LilRender/Color/scale.c src/LilRender/Image/DrawingPrimitives.c src/LilRender/Image/stb_image.c
    cc-options: -Wall -O3 -msse2
    include-dirs: deps
    extra-libraries: m

    default-language: Haskell2010
